changes to publish in npmjs

--- a/packages/use-scroll-direction/package.json
+++ b/packages/use-scroll-direction/package.json
@@ -19,7 +19,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "prepublishOnly": "pnpm run build"
   },
   "keywords": [
     "react",
